
name:                   Haskell99
version:                0.0.1
synopsis:               Some of the solutions for Haskell 99
license:                MIT
license-file:           LICENSE
author:                 airt
maintainer:             airtial@gmail.com
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  exposed-modules:      H_99.H_01_10,
                        H_99.H_11_20,
                        H_99.H_21_28,
                        H_99.H_31_41,
                        H_99.H_46_50,
                        H_99.H_54_60,
                        H_99.H_61_69,
                        H_99.H_70_73
  build-depends:        base >=4.8 && <5.0
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite tests
  type:                 exitcode-stdio-1.0
  main-is:              RunTests.hs
  other-modules:        Tests
  build-depends:        base >=4.8 && <5.0,
                        Haskell99,
                        HUnit
  hs-source-dirs:       tests
  default-language:     Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/airt/Haskell-99
