name:                 ninety-nine-problems
version:              0.0.1
synopsis:             ..
homepage:             https://github.com/airt/ninety-nine-problems
license:              MIT
license-file:         license
author:               airt
maintainer:           airtial@gmail.com
build-type:           Simple
extra-source-files:   readme.md
cabal-version:        >= 1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base == 4.*
  exposed-modules:    H_99.H_01_10,
                      H_99.H_11_20,
                      H_99.H_21_28,
                      H_99.H_31_41,
                      H_99.H_46_50,
                      H_99.H_54_60,
                      H_99.H_61_69,
                      H_99.H_70_73

test-suite ninety-nine-problems-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base, ninety-nine-problems, HUnit, QuickCheck
  main-is:            Spec.hs
  other-modules:      Cases

source-repository head
  type:               git
  location:           https://github.com/airt/ninety-nine-problems
