name:                 ninety-nine-problems
version:              0.0.1
synopsis:             ..
homepage:             https://github.com/airt/ninety-nine-problems
license:              MIT
license-file:         license
author:               airt
maintainer:           airtial@gmail.com
build-type:           Simple
extra-source-files:   readme.md
cabal-version:        >= 1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base == 4.*
  exposed-modules:    NinetyNine.P0X,
                      NinetyNine.P1X,
                      NinetyNine.P2X,
                      NinetyNine.P3X,
                      NinetyNine.P4X,
                      NinetyNine.P5X,
                      NinetyNine.P6X,
                      NinetyNine.P7X

test-suite ninety-nine-problems-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base, ninety-nine-problems, HUnit, QuickCheck
  main-is:            Spec.hs
  other-modules:      Cases

source-repository head
  type:               git
  location:           https://github.com/airt/ninety-nine-problems
